Changed footer light mode color to #333 because for some reason it was still white grey-ish. Fixed contrast errors in index header when light mode (Used WAVE to check). And other small stuff

--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ body {
 .light-mode nav, .light-mode footer{
     background-color: #ddd; /* Lighter navbar background */
 }
-
+.light-mode footer{
+    color: #333
+}
 .light-mode .card {
     background-color: #fff; /* Lighter card background */
     color: #000; /* Dark text for contrast */
@@ -81,6 +83,12 @@ body {
 .light-mode .about-hero-content {
     color: #1e1e1e;
 }
+
+.light-mode .hero-content h1 {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
 
 #darkModeToggle {
     position: fixed;
@@ -278,7 +286,7 @@ footer {
     text-align: center;
     padding: 20px 0;
     background: #111;
-    color: f1f1f1;
+    color: #f1f1f1;
     position: relative;
     overflow: hidden;
 }
@@ -373,7 +381,7 @@ footer p {
 
 .about-story p {
     font-size: 1.2rem;
-    margin-top: 15px 0;
+    margin-top: 15px;
     opacity: 0;
     transform: translateY(30px);
     transition: opacity 1s ease-out, transform 1s ease-out;
@@ -573,7 +581,7 @@ footer p {
 .Services-hero {
     height: 80vh;
     background-image: url('img/Backgrod.jpg');
-    background-size: cover;
+    background-size: auto;
     background-attachment: fixed;
     display: flex;
     align-items: center;
